netdata (1.10.0+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Federico Ceratto <federico@debian.org>  Tue, 27 Mar 2018 22:28:59 +0100

netdata (1.9.0+dfsg-1) unstable; urgency=medium

  * New upstream release (Closes: #885634)

 -- Federico Ceratto <federico@debian.org>  Fri, 26 Jan 2018 23:57:51 +0000

netdata (1.8.0+dfsg-1) unstable; urgency=medium

  [ Lennart Weller ]
  * New upstream release
  * Maintscript update to hopefully rename old config files (Closes: #869200)

 -- Federico Ceratto <federico@debian.org>  Tue, 19 Sep 2017 18:40:00 +0100

netdata (1.7.0+dfsg-1) unstable; urgency=medium

  [ Lennart Weller ]
  * New upstream release (Closes: #868662)
  * Rudimentary solution to the sysvinit conundrum (Closes: #861713)
  * Remove old config files from <1.6.0 with maintscript (Closes: #869200)
  * Add a recommendation for curl. Fixing telegram pushes (Closes: #872799)

  [ Federico Ceratto ]
  * Remove James Cowgill from Uploaders (Closes: #872245)

 -- Federico Ceratto <federico@debian.org>  Thu, 24 Aug 2017 19:38:48 +0100

netdata (1.6.0+dfsg-3) unstable; urgency=medium

  * Add fping Recommends and CAP_NET_RAW capability (Closes: #864370)

 -- Federico Ceratto <federico@debian.org>  Sat, 15 Jul 2017 19:46:27 +0100

netdata (1.6.0+dfsg-2) unstable; urgency=medium

  [ Lennart Weller ]
  * Change logrotate to only re-open logfiles
  * Change pidfile to existing location for sysvinit (Closes: #861713)
  * Change After network to After network-online (Closes: #862455)

 -- Federico Ceratto <federico@debian.org>  Sat, 27 May 2017 12:40:39 +0100

netdata (1.6.0+dfsg-1) unstable; urgency=medium

  [ Federico Ceratto ]
  * New upstream release (Closes: #858757)

  [ Lennart Weller ]
  * Make all of /var writeable avoiding any other MTA problems (Closes: #856502)
  * Add CAP_SETUID permission for the service (Closes: #856500)
  * Change logrotate to weekly (Closes: #857305)