@@ -1,0 +1,14 @@
+Template: netdata/title
+Type: title
+_Description: netdata: Configuration
+
+Template: netdata/send_email
+Type: boolean
+Default: true
+_Description: send emails:
+ netdata sends emails for warnings and alerts to root@localhost for
+ monitoring purposes. Potentially this can trigger a lot of emails.
+ .
+ Please choose to enable or disable sending emails.
+ .
+ If unsure, allow it to send emails (default).
